Provide Scene's mesh metadata to outputs and library users